Library/AXL(Library)/C, C++/AXDev.h

// Read output PDO(Process Data Objects)
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of input pdo data.(for read)
// pbyData         : The Buffer for inserting read data.
DWORD  __stdcall AxlECatReadPdoOutput(DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
DWORD  __stdcall AxlECatReadPdoOutputEx(long lBoardNo, DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Write value to output process data.
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of output pdo data.(for write)
// pbyData         : The Buffer for inserting write data.
DWORD  __stdcall AxlECatWritePdoOutput(DWORD dwBitOffset, DWORD dwDataBitLength, BYTE* pbyData);
// Read SDO(Service Data Objects) by using COE.
DWORD  __stdcall AxlECatReadSdo(DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength, DWORD *pdwReadDataLength);
DWORD  __stdcall AxlECatReadSdoEx(long lBoardNo, DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength, DWORD *pdwReadDataLength);
// Store values in SDO by using COE.
DWORD  __stdcall AxlECatWriteSdo(DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength);
DWORD  __stdcall AxlECatWriteSdoEx(long lBoardNo, DWORD dwStationAddress, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData, DWORD dwDataLength);
DWORD  __stdcall AxlECatReadSdoFromAxisDouble(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, double* pdData);
DWORD  __stdcall AxlECatWriteSdoFromAxisDouble(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, double* pdData);
// Read SDO(DWORD type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisDword(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, DWORD* pdwData);
// Store values in SDO(DWORD type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisDword(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, DWORD* pdwData);
// Read SDO(WORD type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisWord(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, WORD* pwData);
// Store values in SDO(WORD type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisWord(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, WORD* pwData);
// Read SDO(BYTE type) through the axis number.
DWORD  __stdcall AxlECatReadSdoFromAxisByte(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData);
// Store values in SDO(BYTE type) through the axis number.
DWORD  __stdcall AxlECatWriteSdoFromAxisByte(long  lAxisNo, WORD wObjectIndex, BYTE byObjectSubIndex, BYTE* pbyData);
// Read value of EEPROM.
DWORD  __stdcall AxlECatReadEEPRom(DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
// Write value to EEPROM.
DWORD  __stdcall AxlECatWriteEEPRom(DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
DWORD  __stdcall AxlECatReadEEPRomEx(long lBoardNo, DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
DWORD  __stdcall AxlECatWriteEEPRomEx(long lBoardNo, DWORD dwStationAddress, WORD wEEPRomStartOffset, WORD* pwData, DWORD dwDataLength);
// Read value of a register.
//DWORD  __stdcall AxlECatReadRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);

// Write value of a register.
//DWORD  __stdcall AxlECatWriteRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);

// Save BackupData as a file from among the object dictionary of EtherCat slave.
DWORD  __stdcall AxlECatSaveHotSwapData(DWORD dwStationAddress);
// Load BackupData which saved as a file from corresponding EtherCat salve.
DWORD  __stdcall AxlECatLoadHotSwapData(DWORD dwStationAddress);
// When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
//       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
DWORD  __stdcall AxlECatSetHotSwap(DWORD dwStationAddress);
DWORD  __stdcall AxlECatIsSetHotSwap(DWORD dwStationAddress);
DWORD  __stdcall AxlECatReSetHotSwap(DWORD dwStationAddress);
// Set EtherCat master mode (configure = 0, RumMode = 1)
DWORD  __stdcall AxlECatSetMasterMode(DWORD dwMasterMode);
// Get mode status of EtherCat master.
DWORD  __stdcall AxlECatGetMasterMode(DWORD* pdwMasterMode);
// Set MasterOperationMode of EtherCat master.
DWORD  __stdcall AxlECatSetMasterOperationMode(DWORD dwOperationMode);
// Get MasterOperationMode of EtherCat master.
DWORD  __stdcall AxlECatGetMasterOperationMode(DWORD* pdwOperationMode);
// Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
DWORD  __stdcall AxlECatRequestScanData();
// Get total number of scanned slaves.
DWORD  __stdcall AxlECatGetScanSlaveCount(DWORD* pdwSlaveCount);
// Get current status information of EtherCat master.
DWORD  __stdcall AxlECatGetStatus(int* pnECMasterStatus, int* pnECSlaveStatus, int* pnECConnectedSlave, int* pnECConfiguredSlave, int* pnJobTaskCycleCnt, DWORD* pdwECMasterNotification);
// Reconnecting failed network.
DWORD  __stdcall AxlEcatReConnect();
// Get address information of slave which be set.
DWORD  __stdcall AxmECatReadAddress(long lAxisNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxdECatReadAddress(long lModuleNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxaECatReadAddress(long lModuleNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxsECatReadAddress(long lPortNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
// Monitor
// Add an item to proceed with data collection.
DWORD  __stdcall AxlMonitorSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);
// Get information about items to be collected.
DWORD  __stdcall AxlMonitorGetIndexInfo(long* lpItemSize, long* lpItemIndex);
// Get detailed settings of each items for data collection progress.
DWORD  __stdcall AxlMonitorGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);
// Reset settings of all data collection items.
DWORD  __stdcall AxlMonitorResetAllItem();
// Reset settings of selected data collection items.
DWORD  __stdcall AxlMonitorResetItem(long lItemIndex);
// Set the trigger condition of data collection.
DWORD  __stdcall AxlMonitorSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);
// Get the trigger condition of data collection.
//DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);
// Reset trigger condition of data collection.
DWORD  __stdcall AxlMonitorResetTriggerOption();
// Start collecting data.
DWORD  __stdcall AxlMonitorStart(DWORD dwStartOption, DWORD dwOverflowOption);
// Stop collecting data.
DWORD  __stdcall AxlMonitorStop();
// Read collected data.
DWORD  __stdcall AxlMonitorReadData(long* lpItemSize, long* lpDataCount, double* dpReadData);
// Read period of data collection.
DWORD  __stdcall AxlMonitorReadPeriod(DWORD* dwpPeriod);
//////////////////////////////////////////////////////////////////////////
// MonitorEx
// Add an item to proceed with data collection.
DWORD  __stdcall AxlMonitorExSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);
// Gets information about the items to be collected.
DWORD  __stdcall AxlMonitorExGetIndexInfo(long* lpItemSize, long* lpItemIndex);
// Gets the detailed settings for each item to proceed with data collection.
DWORD  __stdcall AxlMonitorExGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);
// Reset the settings for all data collection items.
DWORD  __stdcall AxlMonitorExResetAllItem();
// Reset the settings of the selected data collection item.
DWORD  __stdcall AxlMonitorExResetItem(long lItemIndex);
// Sets the trigger condition for data collection.
DWORD  __stdcall AxlMonitorExSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);
// Gets the trigger condition for data collection.
//DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

// Reset trigger conditions for data collection.
DWORD  __stdcall AxlMonitorExResetTriggerOption();
// Start collecting data.
DWORD  __stdcall AxlMonitorExStart(DWORD dwStartOption, DWORD dwOverflowOption);
// Stop collecting data.
DWORD  __stdcall AxlMonitorExStop();