Library/AXL(Library)/Visual Basic/AXDev.bas


' Read output PDO(Process Data Objects)
' dwBitOffset     : ProcessImage outputs bit offset value.
' dwDataBitLength : bit size of input pdo data.(for read)
' pbyData         : The Buffer for inserting read data.
Public Declare Function AxlECatReadPdoOutput Lib "AXL.dll" (ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long
    Public Declare Function AxlECatReadPdoOutputEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long

' Write value to output process data.
' dwBitOffset     : ProcessImage outputs bit offset value.
' dwDataBitLength : bit size of output pdo data.(for write)
' pbyData         : The Buffer for inserting write data.
Public Declare Function AxlECatWritePdoOutput Lib "AXL.dll" (ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long


' Read SDO(Service Data Objects) by using COE.
Public Declare Function AxlECatReadSdo Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Long, ByRef pdwReadDataLength As Long) As Long
    Public Declare Function AxlECatReadSdoEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwStationAddress As Long, ByVal wObjectIndex As Long, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Long, ByRef pdwReadDataLength As Long) As Long

' Store values in SDO by using COE.
Public Declare Function AxlECatWriteSdo Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Long) As Long
    Public Declare Function AxlECatWriteSdoEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwStationAddress As Long, ByVal wObjectIndex As Long, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte, ByVal dwDataLength As Long) As Long

    Public Declare Function AxlECatReadSdoFromAxisDouble Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Long, ByVal byObjectSubIndex As Byte, ByRef pdData As Double) As Long

    Public Declare Function AxlECatWriteSdoFromAxisDouble Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Long, ByVal byObjectSubIndex As Byte, ByRef pdData As Double) As Long
' Read SDO(DWORD type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisDword Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdwData As Long) As Long

' Store values in SDO(DWORD type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisDword Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pdwData As Long) As Long

' Read SDO(WORD type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisWord Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pwData As Integer) As Long

' Store values in SDO(WORD type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisWord Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pwData As Integer) As Long

' Read SDO(BYTE type) through the axis number.
Public Declare Function AxlECatReadSdoFromAxisByte Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte) As Long

' Store values in SDO(BYTE type) through the axis number.
Public Declare Function AxlECatWriteSdoFromAxisByte Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wObjectIndex As Integer, ByVal byObjectSubIndex As Byte, ByRef pbyData As Byte) As Long

' Read value of EEPROM.
Public Declare Function AxlECatReadEEPRom Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Long) As Long

' Write value to EEPROM.
Public Declare Function AxlECatWriteEEPRom Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wEEPRomStartOffset As Integer, ByRef pwData As Integer, ByVal dwDataLength As Long) As Long
    Public Declare Function AxlECatReadEEPRomEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwStationAddress As Long, ByVal wEEPRomStartOffset As Long, ByRef pwData As Long, ByVal dwDataLength As Long) As Long

    Public Declare Function AxlECatWriteEEPRomEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwStationAddress As Long, ByVal wEEPRomStartOffset As Long, ByRef pwData As Long, ByVal dwDataLength As Long) As Long

' Read value of a register.
Public Declare Function AxlECatReadRegister Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wRegisterOffset As Integer, ByRef pvData As Object, ByVal wLen As Integer) As Long

' Write value of a register.
Public Declare Function AxlECatWriteRegister Lib "AXL.dll" (ByVal dwStationAddress As Long, ByVal wRegisterOffset As Integer, ByRef pvData As Object, ByVal wLen As Integer) As Long

' Save BackupData as a file from among the object dictionary of EtherCat slave.
Public Declare Function AxlECatSaveHotSwapData Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long

' Load BackupData which saved as a file from corresponding EtherCat salve.
Public Declare Function AxlECatLoadHotSwapData Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long

' When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
'       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
Public Declare Function AxlECatSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long
Public Declare Function AxlECatIsSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long
Public Declare Function AxlECatReSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long


' Set EtherCat master mode (configure = 0, RumMode = 1)
Public Declare Function AxlECatSetMasterMode Lib "AXL.dll" (ByVal dwMasterMode As Long) As Long

' Get mode status of EtherCat master.
Public Declare Function AxlECatGetMasterMode Lib "AXL.dll" (ByRef pdwMasterMode As Long) As Long


' Set MasterOperationMode of EtherCat master.
Public Declare Function AxlECatSetMasterOperationMode Lib "AXL.dll" (ByVal dwOperationMode As Long) As Long


' Get MasterOperationMode of EtherCat master.
Public Declare Function AxlECatGetMasterOperationMode Lib "AXL.dll" (ByRef pdwOperationMode As Long) As Long

' Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
Public Declare Function AxlECatRequestScanData Lib "AXL.dll" () As Long



' Get total number of scanned slaves.
Public Declare Function AxlECatGetScanSlaveCount Lib "AXL.dll" (ByRef pdwSlaveCount As Long) As Long


' Get current status information of EtherCat master.
Public Declare Function AxlECatGetStatus Lib "AXL.dll" (ByRef pnECMasterStatus As Integer, ByRef pnECSlaveStatus As Integer, ByRef pnECConnectedSlave As Integer, ByRef pnECConfiguredSlave As Integer, ByRef pnJobTaskCycleCnt As Integer, ByRef pdwECMasterNotification As Long) As Long


' Reconnecting failed network.
Public Declare Function AxlEcatReConnect Lib "AXL.dll" () As Long


' Get address information of slave which be set.
Public Declare Function AxmECatReadAddress Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpStationAddress As Long, ByRef lpAutoIncAddress As Long, ByRef dwpAliasAddress As Long) As Long
Public Declare Function AxdECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dwpStationAddress As Long, ByRef lpAutoIncAddress As Long, ByRef dwpAliasAddress As Long) As Long
Public Declare Function AxaECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dwpStationAddress As Long, ByRef lpAutoIncAddress As Long, ByRef dwpAliasAddress As Long) As Long
Public Declare Function AxsECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dwpStationAddress As Long, ByRef lpAutoIncAddress As Long, ByRef dwpAliasAddress As Long) As Long


' Monitor
' Add an item to proceed with data collection.
Public Declare Function AxlMonitorSetItem Lib "AXL.dll" (ByVal lItemIndex As Long, ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long) As Long


' Get information about items to be collected.
Public Declare Function AxlMonitorGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpItemIndex As Long) As Long


' Get detailed settings of each items for data collection progress.
Public Declare Function AxlMonitorGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Long, ByRef dwpSignalType As Long, ByRef lSignalNo As Long, ByRef lpSubSignalNo As Long) As Long


' Reset settings of all data collection items.
Public Declare Function AxlMonitorResetAllItem Lib "AXL.dll" () As Long


' Reset settings of selected data collection items.
Public Declare Function AxlMonitorResetItem Lib "AXL.dll" (ByVal lItemIndex As Long) As Long


' Set the trigger condition of data collection.
Public Declare Function AxlMonitorSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long, ByVal dwOperatorType As Long, ByVal dValue1 As Double, ByVal dValue2 As Double) As Long



' Get the trigger condition of data collection.
' DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

' Reset trigger condition of data collection.
Public Declare Function AxlMonitorResetTriggerOption Lib "AXL.dll" () As Long


' Start collecting data.
Public Declare Function AxlMonitorStart Lib "AXL.dll" (ByVal dwStartOption As Long, ByVal dwOverflowOption As Long) As Long


' Stop collecting data.
Public Declare Function AxlMonitorStop Lib "AXL.dll" () As Long


' Gets collected data.
Public Declare Function AxlMonitorReadData Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpDataCount As Long, ByRef dpReadData As Double) As Long


' Gets the period of data collection.
Public Declare Function AxlMonitorReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Long) As Long


' MonitorEX
' Add an item to proceed with data collection.
Public Declare Function AxlMonitorExSetItem Lib "AXL.dll" (ByVal lItemIndex As Long, ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long) As Long


' Gets information about the items to be collected.
Public Declare Function AxlMonitorExGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpItemIndex As Long) As Long


' Gets the detailed settings for each item to proceed with data collection.
Public Declare Function AxlMonitorExGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Long, ByRef dwpSignalType As Long, ByRef lpSignalNo As Long, ByRef lpSubSignalNo As Long) As Long


' Reset settings of all data collection items.
Public Declare Function AxlMonitorExResetAllItem Lib "AXL.dll" () As Long


' Reset settings of selected data collection items.
Public Declare Function AxlMonitorExResetItem Lib "AXL.dll" (ByVal lItemIndex As Long) As Long


' Set the trigger condition of data collection.
Public Declare Function AxlMonitorExSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long, ByVal dwOperatorType As Long, ByVal dValue1 As Double, ByVal dValue2 As Double) As Long



' Get the trigger condition of data collection.
' DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

' Reset trigger condition of data collection.
Public Declare Function AxlMonitorExResetTriggerOption Lib "AXL.dll" () As Long


' Start collecting data.
Public Declare Function AxlMonitorExStart Lib "AXL.dll" (ByVal dwStartOption As Long, ByVal dwOverflowOption As Long) As Long


' Stop collecting data.
Public Declare Function AxlMonitorExStop Lib "AXL.dll" () As Long

